# TGConnection-Core

./: .gitignore  CMakeLists.txt  README.md
example/cpp/: CMakeLists.txt
td/telegram/: Client.cpp  Client.h
td/telegram/net/: ConnectionCreator.cpp  ConnectionCreator.h  DcOptionsStore.h
tg-connection-core/android/: CMakeLists.txt  JniExternalLogger.h  build-openssl.sh  build-tdlib.sh  td_connection_jni.cpp
tg-connection-core/connection/: ConnectionTestResult.cpp  ConnectionTestResult.h  ExternalLogger.h  Record.cpp  Record.h  StatsUtils.cpp  StatsUtils.h  TdConnection.cpp  TdConnection.h  TestProxyResult.cpp  TestProxyResult.h
tg-connection-core/cpp/: .gitignore  CMakeLists.txt  cpp_example.cpp  tdlib_credentials.env.example
